<resources>
    <string name="app_name">QuanLySinhVien</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_template_admin">template_admin_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Admin</string>
    <string name="menu_home_manager">Manager</string>
    <string name="menu_userInfo">Employee Info</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Login History of a User</string>
    <string name="menu_search">Searching for student</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>